# perspicio

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
src/perspicio/: perspicio.py
